--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,26 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
+
+  ::-webkit-scrollbar {
+      width: 10px;
+      /* Width of the scrollbar */
+    }
+  
+    ::-webkit-scrollbar-track {
+      background: #000000;
+      /* Color of the track */
+    }
+  
+    ::-webkit-scrollbar-thumb {
+      background: #7E12C3;
+      /* Color of the scrollbar handle */
+    }
+  
+    ::-webkit-scrollbar-thumb:hover {
+      background: #555;
+      /* Color of the scrollbar handle on hover */
+    }
 }
 
 @media (prefers-color-scheme: dark) {
